<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".AddNewEntry">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="54dp"
        android:text="@string/dateText"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateText"
        android:layout_alignStart="@+id/dateText"
        android:layout_marginStart="0dp"
        android:layout_marginTop="36dp"
        android:text="@string/startTimeText" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTime"
        android:layout_alignStart="@+id/startTime"
        android:layout_marginStart="0dp"
        android:layout_marginTop="51dp"
        android:text="@string/endTimeText" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endTime"
        android:layout_alignStart="@+id/endTime"
        android:layout_marginStart="0dp"
        android:layout_marginTop="42dp"
        android:text="@string/wageText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="0.0"
        android:inputType="number|numberDecimal"
        android:textColorHint="@color/hint_white" />

    <Button
        android:id="@+id/changeDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignBottom="@+id/dateText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="0dp"
        android:text="@string/changeButton" />

    <Button
        android:id="@+id/changeStartTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignBottom="@+id/startTime"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="0dp"
        android:text="@string/changeButton" />

    <Button
        android:id="@+id/changeEndTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignBottom="@+id/endTime"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="0dp"
        android:text="@string/changeButton" />

    <Button
        android:id="@+id/finalizeAdd"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="120dp"
        android:text="@string/addButton" />

</RelativeLayout>